<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_now_playing"
        android:title="Now playing"
        android:icon="@drawable/ic_tv"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_search"
        android:title="@string/search_hint"
        android:icon="@drawable/ic_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_favorites"
        android:title="@string/favorites"
        android:icon="@drawable/ic_favorite_off"
        android:checkable="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_refresh"
        android:title="@string/refresh_now"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add_channel"
        android:title="@string/add_channel"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_scan_qr"
        android:title="@string/scan_qr"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_playlists"
        android:title="@string/playlists"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>
